<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.AddExerciseCategoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_name_on_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name_exercise"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/et_description_on_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/description_exercise"
                android:inputType="textMultiLine|textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <View
                android:id="@+id/divider_up"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/photoplace"
                android:cropToPadding="true"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:srcCompat="@drawable/iconcamera250" />

            <Button
                android:id="@+id/btn_get_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/teal_700"
                android:text="@string/make_photo"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/btn_save_on_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/teal_700"
                android:text="@string/save_button"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>